...
    <string name="app_name">Titan Companion</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Titan Companion</string>
    <string name="saved_games">Saved games: </string>
    <string name="create_new_adventure">Start New Adventure</string>
    <string name="load_adventure">Load Adventure</string>
    <string name="title_activity_gamebook_list">Gamebook List</string>
    <string name="viewSite">View Description</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="twofm">The Warlock of Firetop Mountain</string>
...
    <string name="stamina2">Stamina</string>
    <string name="skillAbr">Skill: </string>
    <string name="staminaAbr">Stamina: </string>
    <string name="luck">Luck: </string>
    <string name="name">Name:</string>
    <string name="saveAdventure">Save Adventure</string>
    <string name="rollStats">Reroll Statistics</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_load_adventure">Load Adventure</string>
    <string name="potionsProvisions">Potions &amp; Provisions</string>
    <string name="goldEquipment">Gold &amp; Equipment</string>
...
    <string name="gold2">Gold</string>
    <string name="copper">Copper:</string>
    <string name="editGold">Edit</string>
    <string name="equipment">Equipment:</string>
    <string name="equipment2">Equipment</string>
    <string name="addEquipment">Add Equipment</string>
    <string name="addWeapon">Add Weapon</string>
    <string name="escape">Escape</string>
    <string name="attackOpponent">Attack Opponent</string>
    <string name="handicap">Handicap:</string>
    <string name="rolld6">Roll D6</string>
    <string name="roll2d6">Roll 2D6</string>
    <string name="roll3d6">Roll 3D6</string>
...
    <string name="skirmishForces">In Battle:</string>
    <string name="enemyForces2">Enemy Forces:</string>
    <string name="crew">Crew:</string>
    <string name="date">Date:</string>
    <string name="name2">Name:</string>
    <string name="result">Result</string>
    <string name="close">Close</string>
    <string name="storagePermissionsRequired">Storage permission is required to used this app!</string>
    <string name="gamebookNotImplemented">Sorry, this gamebook is not implemented yet!</string>
    <string name="success">Success!</string>
    <string name="failed">Failed…</string>
    <string name="noProvisionsLeft">You have no provisions left…</string>
    <string name="provisionsMaxStamina">You are already at maximum Stamina!</string>
...
    <string name="robotSpecialAbilitySmallWeaponsDesc">Each combat round supertank deals 1 damage point due to the presence of smaller arms.</string>
    <string name="robotSpecialAbilityFlyInCircles">Fly in circles</string>
    <string name="robotSpecialAbilityFlyInCirclesDesc">If the combat roll is won by 4 or more points, Wasp Fighter deals double damage.</string>
    <string name="robotSpecialAbilityAnkylosaurus">Ankylosaurus stun</string>
    <string name="robotSpecialAbilityAnkylosaurusDesc">Player can only parry in next round after losing a combat round.</string>
    <string name="currentReference">Current Reference?</string>
    <string name="ok">OK</string>
    <string name="normal">Normal</string>
    <string name="sequence">Simultaneous</string>
    <string name="youreLucky">You\'re lucky!</string>
    <string name="defeatedOpponent">You\'ve defeated your opponent!</string>
    <string name="youreUnlucky">You\'re unlucky…</string>
    <string name="knockedOut">You\'ve been knocked out…</string>
...
