...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

    <Button
            android:id="@+id/plusValueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="createNewAdventure"
            android:text="@string/create_new_adventure"/>

    <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/plusValueButton"
            android:onClick="loadAdventure"
            android:text="@string/load_adventure"/>
...
