...
        android:layout_below="@+id/luckCount"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonRollStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSaveAdventure"
        android:layout_alignLeft="@+id/luckCount"
        android:layout_alignParentRight="true"
        android:text="@string/rollStats"
...
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/saveAdventure" 
        android:onClick="saveAdventure"/>

    <EditText
        android:id="@+id/adventureNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/adventureName"
        android:layout_toRightOf="@+id/skillValue"
        android:ems="10" 
        android:inputType="text">
...
